@@ -498,10 +498,10 @@ max_tries_to_place_fp_city = 10000
 ; automatically be added to the new city.
 ai_multi_start_extra_palaces = []
 
-; Turning this on makes the forbidden palace as effective at reducing corruption as the palace itself. More specifically, it means the FP (and any
-; FP-like small wonders such as the Secret Police) act like an additional capital for the purposes of computing corruption. That means, for cities
-; near the FP, it is as if the capital were moved to the FP's location.
-promote_forbidden_palace_decorruption = false
+; Turning this on makes small or great wonders with the "reduces corruption" effect, such as the Forbidden Palace, as effective at reducing corruption
+; as the palace itself. This reduces corruption not only in the city that contains such a wonder, it also reduces distance and rank corruption in
+; nearby cities as if the city were an additional capital.
+promote_wonder_decorruption_effect = false
 
 allow_military_leaders_to_hurry_wonders = false
 
